# sci-patch-template

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
patches/: BUILD.bazel  classdef.sh  game.sh  selector.sh
patches/src/: BUILD.bazel
